--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,10 +17,18 @@
       <div><%= render "icons/contact" %></div>
     </a>
   </nav>
-
-  <div id="burger" class="lines">
-    <i></i>
-    <i></i>
-    <i></i>
+  
+  <div id="nav-burger-container">
+    <div class="burger">
+      <i></i>
+      <i></i>
+      <i></i>
+    </div>
   </div>
+  
+  <!--<div id="burger" class="lines">-->
+  <!--  <i></i>-->
+  <!--  <i></i>-->
+  <!--  <i></i>-->
+  <!--</div>-->
 </header>
