--- a/app/assets/stylesheets/pages/home/_work.scss
+++ b/app/assets/stylesheets/pages/home/_work.scss
@@ -36,7 +36,7 @@ section#work {
       }
       
       div.burger {
-        padding: 17.5%;
+        padding: $inscribed;
         
         i {
           background: $alt-red;
