--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -6,9 +6,11 @@ section#history {
       position: absolute;
       height: calc(100% - 2 * #{$gutter});
       // 100% - mechanism width - (mechanism width - track width) / 2
-      width: calc(100% - 80px);
+      // width: calc(100% - 80px);
+      width: calc(100% - 2 * #{$gutter});
       // mechanism width
-      left: 60px;
+      // left: 60px;
+      left: $gutter;
       top: $gutter;
       
       @include card($alt-purple);
@@ -16,32 +18,51 @@ section#history {
     
     div#history-mechanism {
       position: absolute;
-      height: calc(100% - 60px);
-      top: 30px;
-      width: 60px;
+      
+      // height: calc(100% - 60px);
+      // width: 60px;
+      // top: 30px;
+      height: 4 * $gutter;
+      width: calc(100% - 8 * #{$gutter});
+      left: 4 * $gutter;
+      // bottom: 2 * $gutter;
+      bottom: $gutter;
+      
       background: transparent;
       z-index: 1;
       cursor: pointer;
       
       div#history-track {
         position: absolute;
-        top: 0;
-        left: 50%;
-        background: $alt-purple;
-        height: 100%;
-        width: 20px;
+        
+        // top: 0;
+        // left: 50%;
+        top: 50%;
+        // left: 0;
+        
+        background: $base-purple;
+        
+        // height: 100%;
+        // width: 20px;
+        height: 2 * $gutter;
+        width: 100%;
+        
         border: 4px solid white;
         
-        @include transform(translateX(-50%));
-        @include border-radius(15px);
+        // @include transform(translateX(-50%));
+        @include transform(translateY(-50%));
+        @include border-radius($gutter);
       
         div#history-track-detents {
           span {
           position: absolute;
-          left: 50%;
+          // left: 50%;
+          top: 50%;
           background: white;
-          height: 10px;
-          width: 10px;
+          // height: 10px;
+          // width: 10px;
+          height: $gutter;
+          width: $gutter;
           
           @include transform(translate(-50%, -50%));
           @include border-radius(50%);
@@ -51,11 +72,15 @@ section#history {
       
       div#history-slider {
         position: absolute;
-        left: 50%;
+        // left: 50%;
+        // left: 100%;
+        top: 50%;
         background: white;
-        height: 40px;
-        width: 40px;
-        border: 4px solid white;
+        // height: 40px;
+        // width: 40px;
+        height: 3 * $gutter;
+        width: 3 * $gutter;
+        // border: 4px solid white;
         
         @include user-select(none);
         @include transform(translate(-50%, -50%));
