--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -5,11 +5,7 @@ section#history {
     div#history-cards {
       position: absolute;
       height: calc(100% - 2 * #{$gutter});
-      // 100% - mechanism width - (mechanism width - track width) / 2
-      // width: calc(100% - 80px);
       width: calc(100% - 2 * #{$gutter});
-      // mechanism width
-      // left: 60px;
       left: $gutter;
       top: $gutter;
       
@@ -18,49 +14,42 @@ section#history {
     
     div#history-mechanism {
       position: absolute;
-      
-      // height: calc(100% - 60px);
-      // width: 60px;
-      // top: 30px;
       height: 4 * $gutter;
-      width: calc(100% - 8 * #{$gutter});
-      left: 4 * $gutter;
-      // bottom: 2 * $gutter;
-      bottom: $gutter;
-      
       background: transparent;
       z-index: 1;
       cursor: pointer;
+      width: calc(100% - 4 * #{$gutter} - 64px);
+      left: calc(2 * #{$gutter} + 64px / 2);
+      bottom: calc(64px / 2);
+      
+      @include respond-to(tablet) {
+        width: calc(100% - 4 * #{$gutter} - 56px);
+        left: calc(2 * #{$gutter} + 64px / 2);
+        bottom: calc(64px / 2);
+      }
+      
+      @include respond-to(phone) {
+        width: calc(100% - 4 * #{$gutter} - 52px);
+        left: calc(2 * #{$gutter} + 52px / 2);
+        bottom: calc(52px / 2);
+      }
       
       div#history-track {
         position: absolute;
-        
-        // top: 0;
-        // left: 50%;
         top: 50%;
-        // left: 0;
-        
         background: $base-purple;
-        
-        // height: 100%;
-        // width: 20px;
         height: 2 * $gutter;
         width: 100%;
+        border: 2px solid white;
         
-        border: 4px solid white;
-        
-        // @include transform(translateX(-50%));
         @include transform(translateY(-50%));
         @include border-radius($gutter);
       
         div#history-track-detents {
           span {
           position: absolute;
-          // left: 50%;
           top: 50%;
           background: white;
-          // height: 10px;
-          // width: 10px;
           height: $gutter;
           width: $gutter;
           
@@ -72,15 +61,20 @@ section#history {
       
       div#history-slider {
         position: absolute;
-        // left: 50%;
-        // left: 100%;
         top: 50%;
         background: white;
-        // height: 40px;
-        // width: 40px;
-        height: 3 * $gutter;
-        width: 3 * $gutter;
-        // border: 4px solid white;
+        height: 64px;
+        width: 64px;
+        
+        @include respond-to(tablet) {
+          height: 56px;
+          width: 56px;
+        }
+        
+        @include respond-to(phone) {
+          height: 52px;
+          width: 52px;
+        }
         
         @include user-select(none);
         @include transform(translate(-50%, -50%));
