--- a/app/assets/stylesheets/pages/home/_contact.scss
+++ b/app/assets/stylesheets/pages/home/_contact.scss
@@ -10,94 +10,36 @@ section#contact {
       
       @include transform(translateY(-50%));
       
-      div#contact-anon {
-        width: 100%;
+      textarea#contact-message {
+        display: block;
         position: relative;
-        margin-bottom: $gutter;
-        cursor: pointer;
-        
-        &.anonymous {
-          div#contact-anon-toggle {
-            background: $base-orange;
-            border: 4px solid white;
-            
-            i {
-              left: calc(6px - 4px);
-              background: white;
-            }
-          }
-          
-          div#contact-anon-status {
-            color: white;
-          }
-        }
-        
-        div#contact-anon-toggle {
-          position: relative;
-          height: 48px;
-          width: 100%;
-          background: white;
-          
-          @include border-radius(24px);
-          
-          i {
-            position: absolute;
-            height: 36px;
-            width: 36px;
-            // left: 54px; // 96 - 36 - 6
-            left: calc(100% - 36px - 6px);
-            top: 50%;
-            background: $base-orange;
-            
-            @include transition(left, 1s, $normal-bezier, 0s);
-            @include transform(translateY(-50%));
-            @include border-radius(50%);
-          }
-        }
-        
-        div#contact-anon-status {
-          position: absolute;
-          left: 50%;
-          top: 50%;
-          background: transparent;
-          color: $base-orange;
-          font-size: 32px;
-          
-          @include transform(translate(-50%,-50%));
-        }
-      }
-      
-      input#contact-response, textarea#contact-message {
+        height: calc(4px + 2 * 12px + 4 * (16px + 3px));
         width: 100%;
+        left: 50%;
+        max-width: 960px;
         outline: none;
         background: white;
-        color: $base-orange;
         border: none;
         border-bottom: 4px solid $alt-orange;
         padding: 12px 20px;
         font-size: 16px;
         margin-bottom: $gutter;
         
+        @include transform(translateX(-50%));
         @include border-radius($radius);
       }
       
       a.btn {
+        position: relative;
+        left: 50%;
         color: $base-orange;
+        
+        @include transform(translateX(-50%));
         
         &.hover, &.mousedown {
           color: white;
         }
       }
     }
-    
-    // div#burger-container {
-    //   position: absolute;
-    //   height: 300px;
-    //   width: 300px;
-    //   left: 50%;
-    //   top: 50%;
-      
-    //   @include transform(translate(-50%,-50%));
-    // }
   }
 }
