Redo beard icon, max width card content, responsive about section breadcrumb placing

--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -29,13 +29,13 @@
         <div><%= render "icons/about" %></div>
       </div>
       <div class="about-breadcrumb">
-        <div><%= render "icons/beard" %></div>
+        <div class="expand"><%= render "icons/beard" %></div>
       </div>
       <div class="about-breadcrumb">
-        <div><%= render "icons/leigh" %></div>
+        <div class="expand"><%= render "icons/leigh" %></div>
       </div>
       <div class="about-breadcrumb">
-        <div><%= render "icons/hound" %></div>
+        <div class="expand"><%= render "icons/hound" %></div>
       </div>
       <div class="about-breadcrumb">
         <div><%= render "icons/contact" %></div>
