--- a/app/views/pages/home/_work.html.erb
+++ b/app/views/pages/home/_work.html.erb
@@ -24,10 +24,10 @@
           <div><%= render "icons/work" %></div>
         </div>
         <div class="work-menu-petal">
-          <div><%= render "icons/lisp" %></div>
+          <div class="expand"><%= render "icons/lisp" %></div>
         </div>
         <div class="work-menu-petal">
-          <div><%= render "icons/bash" %></div>
+          <div class="expand"><%= render "icons/bash" %></div>
         </div>
         <div class="work-menu-petal">
           <div><%= render "icons/contact" %></div>
