--- a/app/assets/stylesheets/_/_custom.scss
+++ b/app/assets/stylesheets/_/_custom.scss
@@ -255,10 +255,12 @@ a.btn {
     .card-content {
       position: relative;
       width: 100%;
+      max-width: 960px;
       top: 50%;
+      left: 50%;
       text-align: center;
       
-      @include transform(translateY(-50%));
+      @include transform(translate(-50%,-50%));
       
       .card-head {
         display: inline-block;
@@ -274,7 +276,6 @@ a.btn {
       .card-body {
         display: inline-block;
         width: 100%;
-        max-width: 960px;
         font-size: 2em;
         text-align: justify;
         padding-top: $gutter;
@@ -323,6 +324,10 @@ a.btn {
     height: 100%;
     width: 100%;
     padding: $inscribed;
+    
+    &.expand {
+      padding: 10%;
+    }
     
     svg {
       stroke: $base-color;
