Add icons to history slider

--- a/app/assets/stylesheets/_/_reset.scss
+++ b/app/assets/stylesheets/_/_reset.scss
@@ -13,6 +13,7 @@ html, body {
   // min-height: 100% !important;
   // height: 100%;
   background: #aaaaaa;
+  -webkit-text-size-adjust: none;
 }
 
 body {
