--- a/app/views/pages/home/_history.html.erb
+++ b/app/views/pages/home/_history.html.erb
@@ -19,7 +19,26 @@
         <div id="history-track-detents"></div>
       </div>
       
-      <div id="history-slider"></div>
+      <div id="history-slider">
+        <div class="history-slider-icon">
+          <div><%= render "icons/history" %></div>
+        </div>
+        <div class="history-slider-icon">
+          <div class="expand"><%= render "icons/beard" %></div>
+        </div>
+        <div class="history-slider-icon">
+          <div class="expand"><%= render "icons/leigh" %></div>
+        </div>
+        <div class="history-slider-icon">
+          <div class="expand"><%= render "icons/beard" %></div>
+        </div>
+        <div class="history-slider-icon">
+          <div class="expand"><%= render "icons/hound" %></div>
+        </div>
+        <div class="history-slider-icon">
+          <div><%= render "icons/contact" %></div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
