--- a/app/assets/stylesheets/_/_custom.scss
+++ b/app/assets/stylesheets/_/_custom.scss
@@ -265,22 +265,24 @@ a.btn {
       .card-head {
         display: inline-block;
         width: 100%;
-        font-size: 3.5em;
+        font-size: 35pt;
         text-align: center;
         padding-bottom: $gutter;
         border-bottom: 4px solid white;
         
-        @include respond-to(phone) { font-size: 2em; }
+        // @include respond-to(phone) { font-size: 2em; }
+        @include respond-to(phone) { font-size: 20pt; }
       }
       
       .card-body {
         display: inline-block;
         width: 100%;
-        font-size: 2em;
+        font-size: 20pt;
         text-align: justify;
         padding-top: $gutter;
         
-        @include respond-to(phone) { font-size: 1.1em; }
+        // @include respond-to(phone) { font-size: 1.1em; }
+        @include respond-to(phone) { font-size: 11pt; }
       }
       
       a.btn {
