Added cards with respective icons to work section

--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -17,9 +17,9 @@
       
       <%= render("_/card", tondo: "bear.jpg", head: "I'm Luke", body: "I'm a beginner web developer with a unique eye for design and detail. A practicing perfectionist and iterative development driven, I pride myself on delivering output that is outstanding from front to back, inside and out. Simple and straightforward is just better.") %>
       
-      <%= render("_/card", tondo: "leigh.jpg", head: "My Best Friend", body: "I am the luckiest guy to have Leigh for over 7 years. I love spending everyday with her and she is my core and foundation. Currently, she is busy pursuing her dream of becoming a nurse and has only received incredible feedback. I'm proud of her accomplishments and I can't imagine my life without her.") %>
+      <%= render("_/card", tondo: "leigh.jpg", head: "My Best Friend", body: "I am the luckiest guy to have Leigh for over 7 years. I love spending everyday with her and she is my core and foundation. Currently, she is busy pursuing her dream of becoming a nurse and has only received incredible feedback. I'm proud of her accomplishments, excited for our life together, and I can't imagine being without her.") %>
       
-      <%= render("_/card", tondo: "millie.jpg", head: "Millie The Pup", body: "Rescued and sassy, she loves chewing on bones and howling at the neighbors. Don't let her cuteness deceive you, she is just as rowdy and rambunctious when she demands to play tug of war. At the end of the day when she's all tuckered out, she loves cuddling and falling asleep at the end of the bed.") %>
+      <%= render("_/card", tondo: "millie.jpg", head: "Millie The Pup", body: "Rescued and sassy, she loves chewing on bones and howling at the neighbors. Don't let her cuteness deceive you, she is just as rowdy and rambunctious when she demands to play tug of war. At the end of the day when she's all tuckered out though, she loves cuddling and falling asleep at the end of the bed.") %>
       
       <%= render("_/card", head: "Find Out More By Getting In Touch", contact: "CONTACT") %>
     </div>
