--- a/app/views/pages/home/_history.html.erb
+++ b/app/views/pages/home/_history.html.erb
@@ -9,7 +9,7 @@
       
       <%= render("_/card", head: "2016", body: "I became Controls Engineer for an automotive manufacturing company. It was here that I was able to develop some ideas that were brewing for some time that would allow the rapid prototyping and automated design of schematics and programs with various languages. In particular, I was able to standardize drawings for new machines as well as reduce initial drawing design time considerably using Lisp for AutoCAD.") %>
       
-      <%= render("_/card", head: "2017", body: "A close friend suggested I try my hand at web development after sharing my love for programming. I fell in love with it. I have always loved design principles and concepts and now I am able to mix that with programming. It's absolutely satisfying fulfilling these two passions of mine with web development. It is where I belong and it is where I will excel.") %>
+      <%= render("_/card", head: "2017", body: "A close friend suggested I try my hand at web development after I shared my love for programming. I fell in love with it. I have always loved design principles and concepts and now I am able to mix that with programming. It's absolutely satisfying fulfilling these two passions of mine with web development. It is where I belong and it is where I will excel.") %>
       
       <%= render("_/card", head: "Maybe You Feel Like Reaching Out", contact: "CONTACT") %>
     </div>
