--- a/app/views/pages/home/_work.html.erb
+++ b/app/views/pages/home/_work.html.erb
@@ -7,6 +7,10 @@
       
       <%= render("_/card", head: "Bash Automation", body: "I attempted learning Ruby on Rails four separate times, failing the first three. I wasn't (and still amn't) a guru at the command line which was my biggest fear and pitfall for getting started. After making several apps using Rails in the Cloud9 environment, I made a couple bash scripts to completely automate the process from creating a new workspace in C9 to a live running app in Heroku and backed up on Github.") %>
       
+      <%= render("_/card", head: "Upskill Courses", body: "The one tutorial that brought everything together for me for Ruby on Rails was Upskill Courses. There I learned integrating gems, styling, backend, everything to get me started on my own projects. Everything I was confused about after finishing Michael Hartl's blog tutorial, Upskill clarified with ease. I started on my own projects after I finished because I was ready to create web apps on my own.") %>
+      
+      <%= render("_/card", head: "This Site", body: "I really wanted to create a portfolio that was uniquely mine in every way. Every interaction and choice was completely by my own design and I'm proud for you to be viewing my site. Most of the work here was done on paper, as planning is important to me as a measure for successful execution. Thanks for visiting, please send me a comment to get in touch or just say 'Hi'.") %>
+      
       <%= render("_/card", head: "Tell Me What You Think", contact: "CONTACT") %>
     </div>
     
@@ -28,6 +32,12 @@
         </div>
         <div class="work-menu-petal">
           <div class="expand"><%= render "icons/bash" %></div>
+        </div>
+        <div class="work-menu-petal">
+          <div class="expand"><%= render "icons/upskill" %></div>
+        </div>
+        <div class="work-menu-petal">
+          <div><%= render "icons/briefcase" %></div>
         </div>
         <div class="work-menu-petal">
           <div><%= render "icons/contact" %></div>
