Styling contact section and history icons

--- a/app/views/pages/home/_contact.html.erb
+++ b/app/views/pages/home/_contact.html.erb
@@ -4,6 +4,8 @@
       <textarea id="contact-message" type="text" placeholder="Leave a comment and a way to reach you if you wish"></textarea>
       
       <%= render("_/btn", text: "SEND") %>
+      
+      <div id="contact-confirmation"></div>
     </div>
   </div>
 </section>
