--- a/app/assets/stylesheets/pages/home/_contact.scss
+++ b/app/assets/stylesheets/pages/home/_contact.scss
@@ -15,8 +15,8 @@ section#contact {
         position: relative;
         height: calc(4px + 2 * 12px + 4 * (16px + 3px));
         width: 100%;
-        left: 50%;
         max-width: 960px;
+        left: 50%;
         outline: none;
         background: white;
         border: none;
@@ -39,6 +39,51 @@ section#contact {
         &.hover, &.mousedown {
           color: white;
         }
+        
+        &:after {
+          content: " ";
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 0;
+          height: 100%;
+          background: rgba(0,0,0,0.2);
+          
+          @include transition(width, 0s, linear, 0s);
+          @include border-radius($radius 0 0 $radius);
+        }
+        
+        &.pending:after {
+          width: 100%;
+          
+          @include transition(width, 5.05s, linear, 0s);
+        }
+        
+        &.hover:after, &.mousedown:after {
+          background: rgba(255,255,255,0.3);
+        }
+      }
+      
+      div#contact-confirmation {
+        margin-top: $gutter;
+        display: block;
+        position: relative;
+        left: 50%;
+        top: 0;
+        opacity: 0;
+        background: rgba(255,255,255,0.1);
+        padding: 8px;
+        font-size: 16pt;
+        text-align: center;
+        // height: calc(4px + 2 * 12px + 4 * (16px + 3px));
+        width: 100%;
+        max-width: 960px;
+        left: 50%;
+        
+        border: 1px solid white;
+        
+        @include transform(translateX(-50%));
+        @include border-radius($radius);
       }
     }
   }
