--- a/app/views/layouts/_google_analytics.html.erb
+++ b/app/views/layouts/_google_analytics.html.erb
@@ -11,6 +11,6 @@
       a.src = g;
       m.parentNode.insertBefore(a, m)
     })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-101006720-1', 'auto');
+    ga('create', ENV["google_analytics_key"], 'auto');
   </script>
 <% end %>
