--- a/app/assets/stylesheets/layouts/_footer.scss
+++ b/app/assets/stylesheets/layouts/_footer.scss
@@ -8,7 +8,7 @@ footer#footer {
       display: inline-block;
       height: 80px;
       width: 80px;
-      box-shadow: $gutter, $gutter, $gutter, white;
+      box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
       
       @include border-radius(50%);
       @include transform(translateX(-50%));
