DRY box shadow css property for responsive items

--- a/app/assets/stylesheets/layouts/_footer.scss
+++ b/app/assets/stylesheets/layouts/_footer.scss
@@ -8,8 +8,8 @@ footer#footer {
       display: inline-block;
       height: 80px;
       width: 80px;
-      box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
       
+      @include responsive-shadow;
       @include border-radius(50%);
       @include transform(translateX(-50%));
       
