--- a/app/assets/stylesheets/_/_custom.scss
+++ b/app/assets/stylesheets/_/_custom.scss
@@ -28,6 +28,11 @@ $radius: 8px;
 // sqrt(2) / 2 plus some change
 $inscribed: 17.5%;
 
+// responsive item box shadow
+@mixin responsive-shadow {
+  box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
+}
+
 .burger {
   position: absolute;
   top: 0;
@@ -45,8 +50,8 @@ $inscribed: 17.5%;
     height: 10%;
     width: 100%;
     background: white;
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
     
+    @include responsive-shadow;
     @include border-radius(5%/#{50%});
     @include transition(transform, 0.4s, $overshoot-bezier, 0s);
     
@@ -161,8 +166,8 @@ a.btn {
   max-width: 400px;
   height: 64px;
   background: white;
-  box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
   
+  @include responsive-shadow;
   @include border-radius($radius);
   
   &.hover {
@@ -204,8 +209,8 @@ a.btn {
     padding: $gutter;
     opacity: 0;
     background: $color;
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
     
+    @include responsive-shadow;
     @include user-select(none);
     @include cursor-grab;
     @include transition(all, 1s, $normal-bezier, 0s);
@@ -237,8 +242,8 @@ a.btn {
       background: white;
       cursor: pointer;
       z-index: 2;
-      box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
       
+      @include responsive-shadow;
       background-repeat: no-repeat;
       background-position: center center;
       background-color: #ccc;
@@ -307,7 +312,8 @@ a.btn {
   cursor: pointer;
   background: white;
   border: 2px solid $base-color;
-  box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
+  
+  @include responsive-shadow;
   
   &.hover {
     background: $alt-color;
