Fix contact button events

--- a/app/views/pages/home/_contact.html.erb
+++ b/app/views/pages/home/_contact.html.erb
@@ -3,7 +3,7 @@
     <div id="contact-content">
       <textarea id="contact-message" type="text" placeholder="Leave a comment and a way to reach you if you wish"></textarea>
       
-      <%= render("_/btn", text: "SEND") %>
+      <%= render("_/btn", text: "SEND", href: "#contact") %>
       
       <div id="contact-confirmation"></div>
     </div>
