Change font stack to Poiret One and Open Sans

--- a/app/assets/stylesheets/_/_reset.scss
+++ b/app/assets/stylesheets/_/_reset.scss
@@ -1,5 +1,7 @@
-$sans-serif: 'Covered By Your Grace', cursive;
-$serif: 'Poiret One', cursive;
+// $serif: 'Slabo 27px', serif;
+// $sans-serif: 'Roboto Condensed', sans-serif;
+$serif: "Poiret One", serif;
+$sans-serif: 'Open Sans', sans-serif;
 
 *, *:before, *:after {
   padding: 0;
