--- a/app/views/layouts/_google_fonts.html.erb
+++ b/app/views/layouts/_google_fonts.html.erb
@@ -1,2 +1,2 @@
-<link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
