--- a/app/views/pages/home/_contact.html.erb
+++ b/app/views/pages/home/_contact.html.erb
@@ -1,7 +1,9 @@
 <section id="contact" class="section">
   <div id="contact-container" class="section-container">
     <div id="contact-content">
-      <textarea id="contact-message" type="text" placeholder="Leave a comment and a way to reach you if you wish"></textarea>
+      <input id="contact-address" type="text" placeholder="Email" />
+      
+      <textarea id="contact-message" type="text" placeholder="Leave a message..."></textarea>
       
       <%= render("_/btn", text: "SEND", href: "#contact") %>
       
